Update favicon.ico macro

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -13,6 +13,9 @@
 <!-- Icons -->
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/apple-touch-icon-144-precomposed.png">
 <link rel="shortcut icon" href="img/favicon.png">
+{{- with .Site.Params.favicon }}
+<link rel='icon' type='image/x-icon' href="{{ . | absURL }}" />
+{{- end -}}
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary" />
